starship: update to 1.21.0

--- a/mingw-w64-starship/PKGBUILD
+++ b/mingw-w64-starship/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=starship
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.20.0
+pkgver=1.21.0
 pkgrel=1
 pkgdesc="The cross-shell prompt for astronauts (mingw-w64)"
 arch=('any')
@@ -15,29 +15,29 @@ msys2_references=(
   'purl: pkg:cargo/starship'
 )
 license=('spdx:ISC')
-makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
-             "${MINGW_PACKAGE_PREFIX}-cmake"
-             'git')
+makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-cmake")
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: Nerd Font Symbols preset")
 options=('!strip' '!lto') # done at build stage
-source=("git+${msys2_repository_url}.git#tag=v${pkgver}")
-sha256sums=('f71289815ebec8292cd91b23c30f3cb6f5a838ce53e1d2b6c57d6b87bea27ac2')
+source=("${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('2f068545f270733add06c90592f3fb36422b8f650853f707956d24c06041b751')
+noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
-  cd "${_realname}"
+  tar -xzf "${_realname}-${pkgver}.tar.gz" || true
+  cd "${_realname}-${pkgver}"
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "${_realname}"
+  cd "${_realname}-${pkgver}"
 
   export WINAPI_NO_BUNDLED_LIBRARIES=1
   cargo build --release --frozen
 }
 
 package() {
-  cd "${_realname}"
+  cd "${_realname}-${pkgver}"
 
   export WINAPI_NO_BUNDLED_LIBRARIES=1
   cargo install \
