libspelling: update to 0.4.3

--- a/mingw-w64-libspelling/PKGBUILD
+++ b/mingw-w64-libspelling/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=libspelling
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.4.2
+pkgver=0.4.3
 pkgrel=1
 pkgdesc="A GNOME library for spellchecking (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://gitlab.gnome.org/GNOME/libspelling"
+url='https://gnome.pages.gitlab.gnome.org/libspelling/libspelling-1/'
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libspelling"
 license=("spdx:LGPL-2.1-or-later")
 depends=(
@@ -25,7 +25,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-vala"
   )
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('b3e609b1a247e71bc097e262564f33f51fd7db566eeb0cd74ae5021536b878b5')
+sha256sums=('7c0d17720cd9eddbc722a55436d315afa327da6e6732c3b8fac61c8cb70d8328')
 
 build() {
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
