python-faker: update to 30.6.0

--- a/mingw-w64-python-faker/PKGBUILD
+++ b/mingw-w64-python-faker/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=faker
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=29.0.0
+pkgver=30.6.0
 pkgrel=1
 pkgdesc="Faker generates fake data for you (mingw-w64)"
 arch=('any')
@@ -16,7 +16,8 @@ url="https://faker.readthedocs.io/"
 msys2_repository_url="https://github.com/joke2k/faker"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-dateutil")
+         "${MINGW_PACKAGE_PREFIX}-python-dateutil"
+         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
@@ -25,7 +26,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-ukpostcodeparser"
               "${MINGW_PACKAGE_PREFIX}-python-email-validator")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('34e89aec594cad9773431ca479ee95c7ce03dd9f22fda2524e2373b880a2fa77')
+sha256sums=('be0e548352c1be6f6d9c982003848a0d305868f160bb1fb7f945acffc347e676')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
