--- a/mingw-w64-python-pytest-xdist/PKGBUILD
+++ b/mingw-w64-python-pytest-xdist/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=3.5.0
+pkgver=3.6.1
 pkgrel=1
 pkgdesc="py.test xdist plugin for distributed testing and loop-on-failing modes (mingw-w64)"
 arch=('any')
@@ -26,12 +26,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
              "${MINGW_PACKAGE_PREFIX}-python-wheel")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('cbb36f3d67e0c478baa57fa4edc8843887e0f6cfc42d677530a36d7472b32d8a')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('ead156a4db231eec769737f57668ef58a2084a34b2e55c4a8fa20d861107300d')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}"
 
   # Set version for setuptools_scm
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
@@ -46,7 +46,9 @@ build() {
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
 
+  ${MINGW_PREFIX}/bin/pip install ${_realname} -f dist --no-deps --no-index
   ${MINGW_PREFIX}/bin/python -m pytest || warning "Tests failed"
+  ${MINGW_PREFIX}/bin/pip uninstall -y ${_realname}
 }
 
 package() {
