--- a/mingw-w64-python-pytest-rerunfailures/PKGBUILD
+++ b/mingw-w64-python-pytest-rerunfailures/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=14.0
 pkgrel=1
 pkgdesc="a pytest plugin that re-runs failed tests up to -n times to eliminate flakey failures (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: pytest-rerunfailures'
 )
