--- a/mingw-w64-python-pytest-subprocess/PKGBUILD
+++ b/mingw-w64-python-pytest-subprocess/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=1.5.2
 pkgrel=1
 pkgdesc="Pytest plugin to fake subprocess (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: pytest-subprocess'
 )
