Drop more clang32 packages

--- a/mingw-w64-chromaprint/PKGBUILD
+++ b/mingw-w64-chromaprint/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.5.1
 pkgrel=2
 pkgdesc="Library that implements a custom algorithm for extracting fingerprints from any audio source (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://acoustid.org/chromaprint"
 license=("LGPL")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
