--- a/mingw-w64-directxmath/PKGBUILD
+++ b/mingw-w64-directxmath/PKGBUILD
@@ -9,7 +9,7 @@ _tag=feb2024
 pkgrel=2
 pkgdesc="DirectXMath is an all inline SIMD C++ linear algebra library for use in games and graphics apps (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: mingw-w64-directxmath'
 )
