--- a/mingw-w64-fxc2/PKGBUILD
+++ b/mingw-w64-fxc2/PKGBUILD
@@ -11,7 +11,7 @@ _commit='807d26f4e4e9e9d0d0d6c1e05493b28eafb20e91'
 pkgrel=1
 pkgdesc="A wine-runnable version of Microsofts Shader Compiler fxc (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/mozilla/fxc2/'
 license=('spdx:MPL-2.0')
 options=('strip' 'staticlibs')
