--- a/mingw-w64-glibmm/PKGBUILD
+++ b/mingw-w64-glibmm/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.66.7
 pkgrel=1
 pkgdesc="Glib-- (glibmm) is a C++ interface for glib (V2.66) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gtkmm.org/"
 msys2_repository_url='https://gitlab.gnome.org/GNOME/glibmm.git'
 license=('spdx:LGPL-2.1-or-later')
