--- a/mingw-w64-libdvdnav/PKGBUILD
+++ b/mingw-w64-libdvdnav/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=6.1.1
 pkgrel=1
 pkgdesc="The library for xine-dvdnav plugin (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.videolan.org/developers/libdvdnav.html"
 license=("GPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
