--- a/mingw-w64-libmicrodns/PKGBUILD
+++ b/mingw-w64-libmicrodns/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.2.0
 pkgrel=3
 pkgdesc="Minimal mDNS resolver library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/videolabs/libmicrodns"
 msys2_references=(
   "cpe: cpe:/a:videolabs:libmicrodns"
