--- a/mingw-w64-openh264/PKGBUILD
+++ b/mingw-w64-openh264/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.4.1
 pkgrel=2
 pkgdesc="Library for encoding/decoding H264/AVC video streams (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.openh264.org/"
 msys2_repository_url="https://github.com/cisco/openh264"
 msys2_references=(
