--- a/mingw-w64-orc/PKGBUILD
+++ b/mingw-w64-orc/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.4.40
 pkgrel=1
 pkgdesc="The Oild Runtime Compiler (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/projects/orc.html"
 msys2_repository_url="https://gitlab.freedesktop.org/gstreamer/orc"
 license=("custom")
