--- a/mingw-w64-cairomm/PKGBUILD
+++ b/mingw-w64-cairomm/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.14.5
 pkgrel=2
 pkgdesc="C++ bindings to Cairo vector graphics library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://cairographics.org/cairomm/"
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-cairo"
