--- a/mingw-w64-faad2/PKGBUILD
+++ b/mingw-w64-faad2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.11.1
 pkgrel=1
 pkgdesc="ISO AAC audio decoder (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/knik0/faad2"
 msys2_references=(
   "cpe: cpe:/a:audiocoding:faad2"
