--- a/mingw-w64-fdk-aac/PKGBUILD
+++ b/mingw-w64-fdk-aac/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.0.3
 pkgrel=1
 pkgdesc="A standalone library of the Fraunhofer FDK AAC code from Android (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: libfdk-aac'
 )
