--- a/mingw-w64-gnupg/PKGBUILD
+++ b/mingw-w64-gnupg/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.4.5
 pkgrel=1
 pkgdesc="GNU Privacy Guard - a PGP replacement tool (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gnupg.org/"
 msys2_references=(
   'archlinux: gnupg'
