--- a/mingw-w64-iso-codes/PKGBUILD
+++ b/mingw-w64-iso-codes/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.17.0
 pkgrel=1
 pkgdesc="Lists of the country, language, and currency names (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-python")
 url="https://salsa.debian.org/iso-codes-team/iso-codes"
