--- a/mingw-w64-pycairo/PKGBUILD
+++ b/mingw-w64-pycairo/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Python bindings for the cairo graphics library (mingw-w64)"
 url="https://pycairo.readthedocs.io"
 msys2_repository_url="https://github.com/pygobject/pycairo"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:LGPL-2.1-only OR MPL-1.1')
 depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-python")
