--- a/mingw-w64-python-psutil/PKGBUILD
+++ b/mingw-w64-python-psutil/PKGBUILD
@@ -11,7 +11,7 @@ pkgver=5.9.8
 pkgrel=1
 pkgdesc="A cross-platform process and system utilities module for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/giampaolo/psutil"
 msys2_references=(
   'pypi: psutil'
