--- a/mingw-w64-python-py-cpuinfo/PKGBUILD
+++ b/mingw-w64-python-py-cpuinfo/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=9.0.0
 pkgrel=2
 pkgdesc="Get CPU info with pure Python 2 & 3 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/workhorsy/py-cpuinfo'
 msys2_references=(
   'pypi: py-cpuinfo'
