--- a/mingw-w64-python-pyasn1/PKGBUILD
+++ b/mingw-w64-python-pyasn1/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc='ASN.1 types and codecs (mingw-w64)'
 url='https://github.com/pyasn1/pyasn1/'
 license=('spdx:BSD-2-Clause')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-pyasn1'
   'pypi: pyasn1'
