--- a/mingw-w64-python-tomli/PKGBUILD
+++ b/mingw-w64-python-tomli/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.0.1
 pkgrel=9
 pkgdesc="A lil' TOML parser (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/hukkin/tomli'
 msys2_references=(
   'pypi: tomli'
