--- a/mingw-w64-robin-hood-hashing/PKGBUILD
+++ b/mingw-w64-robin-hood-hashing/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.11.5
 pkgrel=1
 pkgdesc='robin_hood unordered map & set (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/martinus/robin-hood-hashing/'
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
