--- a/mingw-w64-soundtouch/PKGBUILD
+++ b/mingw-w64-soundtouch/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.3.3
 pkgrel=1
 pkgdesc="An audio processing library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.surina.net/soundtouch/"
 msys2_references=(
   "cpe: cpe:/a:surina:soundtouch"
