--- a/mingw-w64-spandsp/PKGBUILD
+++ b/mingw-w64-spandsp/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.0.6
 pkgrel=5
 pkgdesc="A DSP library for telephony (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('GPL' 'LGPL')
 url="https://www.soft-switch.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
