--- a/mingw-w64-spirv-llvm-translator/PKGBUILD
+++ b/mingw-w64-spirv-llvm-translator/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=18.1.4
 pkgrel=1
 pkgdesc='Tool and a library for bi-directional translation between SPIR-V and LLVM IR (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/KhronosGroup/SPIRV-LLVM-Translator'
 msys2_references=(
   'archlinux: spirv-llvm-translator'
