--- a/mingw-w64-vulkan-utility-libraries/PKGBUILD
+++ b/mingw-w64-vulkan-utility-libraries/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.3.296.0
 pkgrel=1
 pkgdesc='Libraries for Vulkan developers (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.khronos.org/vulkan/"
 msys2_repository_url="https://github.com/KhronosGroup/Vulkan-Utility-Libraries"
 license=('spdx:Apache-2.0')
