--- a/mingw-w64-zbar/PKGBUILD
+++ b/mingw-w64-zbar/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.23.93
 pkgrel=2
 pkgdesc="Application and library for reading bar codes from various sources (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mchehab/zbar"
 msys2_references=(
   "cpe: cpe:/a:zbar_project:zbar"
