sfcgal: Update to 2.0.0

--- a/mingw-w64-python-pysfcgal/PKGBUILD
+++ b/mingw-w64-python-pysfcgal/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pysfcgal
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=1.5.2
-pkgrel=2
+pkgver=2.0.0
+pkgrel=1
 pkgdesc='Python SFCGAL binding (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,7 +12,7 @@ url='https://gitlab.com/SFCGAL/pysfcgal'
 msys2_references=(
   'pypi: PySFCGAL'
 )
-license=('spdx:MIT')
+license=('spdx:GPL-3.0-or-later')
 depends=(
     ${MINGW_PACKAGE_PREFIX}-python
     ${MINGW_PACKAGE_PREFIX}-sfcgal
@@ -25,7 +25,7 @@ makedepends=(
     ${MINGW_PACKAGE_PREFIX}-python-setuptools
 )
 source=(https://gitlab.com/SFCGAL/pysfcgal/-/archive/v${pkgver}/pysfcgal-v${pkgver}.tar.gz)
-sha256sums=('322c174ed05005a192441da357ea648b7fb4e0abb8bdc6e4535f6cdaae403870')
+sha256sums=('fad4832d0264b1d20dc5425366d6dbc6321efac88298ff7bd0ea7a796738488f')
 
 build() {
   cp -r "${_realname}-v${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
