--- a/mingw-w64-python-django/PKGBUILD
+++ b/mingw-w64-python-django/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=django
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.2.14
+pkgver=5.1.2
 pkgrel=1
 pkgdesc="A high-level Python Web framework that encourages rapid development and clean design (mingw-w64)"
 arch=('any')
@@ -16,41 +16,36 @@ msys2_references=(
 msys2_repository_url='https://github.com/django/django/'
 url='https://www.djangoproject.com/'
 license=('spdx:BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-asgiref"
-         "${MINGW_PACKAGE_PREFIX}-python-pytz"
+depends=("${MINGW_PACKAGE_PREFIX}-python-asgiref"
          "${MINGW_PACKAGE_PREFIX}-python-sqlparse"
          "${MINGW_PACKAGE_PREFIX}-python-tzdata")
-optdepends=("${MINGW_PACKAGE_PREFIX}-python-psycopg2: for PostgreSQL backend"
-            "${MINGW_PACKAGE_PREFIX}-python-bcrypt: for bcrypt support"
+optdepends=("${MINGW_PACKAGE_PREFIX}-python-bcrypt: for bcrypt support"
             "${MINGW_PACKAGE_PREFIX}-python-argon2_cffi: for Argon2 support")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-bcrypt"
              "${MINGW_PACKAGE_PREFIX}-python-argon2_cffi"
-             "${MINGW_PACKAGE_PREFIX}-python-psycopg2"
              "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=(#"Django-${pkgver}.tar.gz"::"https://www.djangoproject.com/download/${pkgver}/tarball/"
         "${_realname}-${pkgver}.tar.gz"::https://github.com/django/django/archive/${pkgver}.tar.gz)
-sha512sums=('29590efb84940831bedbbd8df174c16bb0adf131d5ef414b692f85d4c1bf98e6076df49b761f5e2c1c3c2f87d784085d7bae82eb914c94746fc6ce93bd87b06c')
+sha512sums=('402f7118050e22c6a0fdc694c9907b8d9be9994f1b8c554495243147e5c7e7e76b152c38b04b0af37a291031a0ddc78e5a40402844e6b5c044e4dc634c63479b')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
 prepare() {
-  tar -xzf ${srcdir}/${_realname}-${pkgver}.tar.gz -C ${srcdir} || true
+  tar -xzf ${srcdir}/${_realname}-${pkgver}.tar.gz || true
 }
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
