--- a/mingw-w64-leptonica/PKGBUILD
+++ b/mingw-w64-leptonica/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=leptonica
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.84.1
+pkgver=1.85.0
 pkgrel=1
 pkgdesc="An open source C library for efficient image processing and image analysis operations (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://www.leptonica.org'
+msys2_repository_url='https://github.com/danbloomberg/leptonica'
 msys2_references=(
   "cpe: cpe:/a:leptonica:leptonica"
 )
@@ -22,7 +23,7 @@ depends=(${MINGW_PACKAGE_PREFIX}-giflib
          ${MINGW_PACKAGE_PREFIX}-openjpeg2
          ${MINGW_PACKAGE_PREFIX}-zlib)
 source=("https://github.com/DanBloomberg/leptonica/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('2b3e1254b1cca381e77c819b59ca99774ff43530209b9aeb511e1d46588a64f6')
+sha256sums=('3745ae3bf271a6801a2292eead83ac926e3a9bc1bf622e9cd4dd0f3786e17205')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
