osgearth: update to 3.7

--- a/mingw-w64-osgearth/PKGBUILD
+++ b/mingw-w64-osgearth/PKGBUILD
@@ -4,43 +4,51 @@
 _realname=osgearth
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.5
-pkgrel=4
+pkgver=3.7
+pkgrel=1
+_rj_ver=1.1.0
+_lerc_commit=19542a00b9a8b5c1089f74239e5859e02e403212
 arch=('any')
 pkgdesc="A terrain rendering toolkit for OpenSceneGraph (mingw-w64)"
 mingw_arch=('ucrt64' 'clang64')
-url="http://osgearth.org"
+url="https://www.pelicanmapping.com/home-1/opensource"
 msys2_repository_url="https://github.com/gwaldron/osgearth"
 msys2_references=(
   'aur: osgearth'
 )
 license=('spdx:LGPL-3.0-or-later WITH LGPL-3.0-linking-exception')
-depends=("${MINGW_PACKAGE_PREFIX}-blosc"
-         "${MINGW_PACKAGE_PREFIX}-curl"
-         $([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-draco")
+depends=("${MINGW_PACKAGE_PREFIX}-curl"
+         #"${MINGW_PACKAGE_PREFIX}-blosc"
+         #"${MINGW_PACKAGE_PREFIX}-draco"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gdal"
          "${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-glew"
-         "${MINGW_PACKAGE_PREFIX}-leveldb"
-         "${MINGW_PACKAGE_PREFIX}-libwebp"
+         #"${MINGW_PACKAGE_PREFIX}-leveldb"
          #"${MINGW_PACKAGE_PREFIX}-libzip"
          "${MINGW_PACKAGE_PREFIX}-OpenSceneGraph"
          "${MINGW_PACKAGE_PREFIX}-protobuf"
-         "${MINGW_PACKAGE_PREFIX}-rocksdb"
          "${MINGW_PACKAGE_PREFIX}-spdlog"
          "${MINGW_PACKAGE_PREFIX}-sqlite3")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "git")
-source=("${_realname}"::"git+https://github.com/gwaldron/osgearth.git#tag=${_realname}-${pkgver}"
-        "0001-calling-convention.patch"
+             "${MINGW_PACKAGE_PREFIX}-libwebp"
+             "${MINGW_PACKAGE_PREFIX}-rocksdb")
+optdepends=("${MINGW_PACKAGE_PREFIX}-libwebp"
+            "${MINGW_PACKAGE_PREFIX}-rocksdb")
+source=("https://github.com/gwaldron/osgearth/archive/${_realname}-${pkgver}.tar.gz"
+        "https://github.com/Tencent/rapidjson/archive/v${_rj_ver}/rapidjson-v${_rj_ver}.tar.gz"
+        "https://github.com/Esri/lerc/archive/${_lerc_commit}/lerc-${_lerc_commit}.tar.gz"
+        "0001-fix-cmake-config-install-destination.patch"
         "0002-cxx-standard-17.patch"
         "0101-rj-remove-non-compiling-assignment-operator.patch::https://patch-diff.githubusercontent.com/raw/Tencent/rapidjson/pull/719.patch")
-sha256sums=('SKIP'
-            'a17f6e6160b2b399a136090c6b714baeddf41bb3b92c804d571b329e19a32063'
-            'fa436de5698eebad2bf270a03f725dead89188ac9c9a634465ef397f975f990f'
+sha256sums=('d13d0f749759f8f012eb1fb7cd29ae30b73fc4463b817c8c31f0ac408cfadd16'
+            'bf7ced29704a1e696fbccf2a2b4ea068e7774fa37f6d7dd4039d0787f8bed98e'
+            '11988ad44f4b63df7dde62bccde9b194cff468bf389912e3f3f7ebf06246c370'
+            '21becfcea4f11f055f0b94eccc8a0e7e6fde7c8cca85951835bffbea2681b431'
+            'ae80d6a24c6115a893373df572a0c47c7aedfe3913ffe2d247d510b9abc73f78'
             '8abc5c5ef033801ea99a9f289126e473ccf4ebdb9ab33fa8157f957fdeb03a2f')
 
 apply_patch_with_msg() {
@@ -52,17 +60,17 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/${_realname}"
-
+  cd "${srcdir}"/rapidjson-${_rj_ver}
   apply_patch_with_msg \
-    0001-calling-convention.patch \
+    0101-rj-remove-non-compiling-assignment-operator.patch
+  
+  cd "${srcdir}"/${_realname}-${_realname}-${pkgver}
+  apply_patch_with_msg \
+    0001-fix-cmake-config-install-destination.patch \
     0002-cxx-standard-17.patch
 
-  git submodule update --init --recursive
-
-  cd src/third_party/rapidjson
-    apply_patch_with_msg \
-      0101-rj-remove-non-compiling-assignment-operator.patch
+  mv "${srcdir}"/rapidjson-${_rj_ver}/* src/third_party/rapidjson/
+  mv "${srcdir}"/lerc-${_lerc_commit}/* src/third_party/lerc/
 }
 
 build() {
@@ -75,7 +83,7 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  CXXFLAGS+=" -w -Wno-register -DSTRSAFE_NO_DEPRECATE" \
+  CXXFLAGS+=" -w -Wno-register" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   "${MINGW_PREFIX}"/bin/cmake.exe \
     -GNinja \
@@ -85,12 +93,11 @@ build() {
     -DOSGEARTH_BUILD_EXAMPLES=OFF \
     -DOSGEARTH_BUILD_TESTS=OFF \
     -DOSGEARTH_BUILD_LEGACY_SPLAT_NODEKIT=ON \
-    -DOSGEARTH_BUILD_LEVELDB_CACHE=ON \
     -DOSGEARTH_BUILD_ZIP_PLUGIN=OFF \
-    -DPROTOBUF_USE_DLLS=ON \
+    -DOSGEARTH_PROTOBUF_FORCE_CONFIG_MODE=ON \
     -DCURL_NO_CURL_CMAKE=ON \
-    -DCURL_IS_STATIC=OFF \
-    ../${_realname}
+    -DMY_LIBRARIES="dbghelp" \
+    ../${_realname}-${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
@@ -99,10 +106,16 @@ package() {
   cd build-${MSYSTEM}
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
-  mv "${pkgdir}${MINGW_PREFIX}"/cmake "${pkgdir}${MINGW_PREFIX}"/lib/cmake
-
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/share/osgearth
-  cp -rf "${srcdir}"/${_realname}/data "${pkgdir}${MINGW_PREFIX}"/share/osgearth
+  cp -rf "${srcdir}"/${_realname}-${_realname}-${pkgver}/data \
+    "${pkgdir}${MINGW_PREFIX}"/share/osgearth
 
-  install -Dm644 "${srcdir}/${_realname}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
+  for _f in "${pkgdir}${MINGW_PREFIX}"/lib/cmake/osgearth/*.cmake; do
+    sed -e "s|${PREFIX_WIN}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
+    sed -e "s|${MINGW_PREFIX}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
+  done
+
+  install -Dm644 "${srcdir}"/${_realname}-${_realname}-${pkgver}/LICENSE.txt \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
