--- a/mingw-w64-gnome-text-editor/PKGBUILD
+++ b/mingw-w64-gnome-text-editor/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gnome-text-editor
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=47.0
+pkgver=47.1
 pkgrel=1
 pkgdesc="A simple text editor for the GNOME desktop (mingw-w64)"
 arch=('any')
@@ -16,6 +16,7 @@ license=('spdx:GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-editorconfig-core-c"
          "${MINGW_PACKAGE_PREFIX}-enchant"
          "${MINGW_PACKAGE_PREFIX}-glib2"
+         "${MINGW_PACKAGE_PREFIX}-gtk4"
          "${MINGW_PACKAGE_PREFIX}-gtksourceview5"
          "${MINGW_PACKAGE_PREFIX}-libspelling"
          "${MINGW_PACKAGE_PREFIX}-icu"
@@ -27,17 +28,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gtk-doc"
              "${MINGW_PACKAGE_PREFIX}-gettext"
              "${MINGW_PACKAGE_PREFIX}-itstool")
-source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz
-        "https://gitlab.gnome.org/GNOME/gnome-text-editor/-/merge_requests/172.patch")
-sha256sums=('0304961974bdacc7e6e8d146dadc949527df99b2823582c8d1ba8b33d25d4217'
-            '36060b47ad21c08403f19302014690b4e3d43f2e30211913ada396dfbdb9113c')
-
-prepare() {
-  cd "${_realname}-${pkgver}"
-
-  # https://gitlab.gnome.org/GNOME/gnome-text-editor/-/merge_requests/172
-  patch -Np1 -i "${srcdir}/172.patch"
-}
+source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz)
+sha256sums=('de95642e2b40ff265feecd86b939e0fd018e4eb2ba499350f2bad2bfcc54010c')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
