--- a/mingw-w64-libpanel/PKGBUILD
+++ b/mingw-w64-libpanel/PKGBUILD
@@ -4,14 +4,16 @@ _realname=libpanel
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=1.8.0
+pkgver=1.8.1
 pkgrel=1
 pkgdesc="A dock/panel library for GTK4 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
 url='https://gitlab.gnome.org/GNOME/libpanel'
 license=('spdx:LGPL-3.0-or-later')
-depends=("${MINGW_PACKAGE_PREFIX}-glib2"
+depends=("${MINGW_PACKAGE_PREFIX}-cairo"
+         "${MINGW_PACKAGE_PREFIX}-glib2"
+         "${MINGW_PACKAGE_PREFIX}-graphene"
          "${MINGW_PACKAGE_PREFIX}-gtk4"
          "${MINGW_PACKAGE_PREFIX}-libadwaita")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -22,13 +24,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-vala")
 source=("https://download.gnome.org/sources/libpanel/${pkgver:0:3}/libpanel-${pkgver}.tar.xz")
-sha256sums=('5a9b6b54452fa1903a2fd64ba62278ef94b9b11659b7e1a5fda3518b66cd39c3')
+sha256sums=('b87b8fa9b79768cc704243793f0158a040a1e46d37b9889188545a7f7dcaa6fb')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/meson.exe \
+    ${MINGW_PREFIX}/bin/meson.exe setup \
       --prefix="${MINGW_PREFIX}" \
       --wrap-mode=nodownload \
       --auto-features=enabled \
