python-webcolors: update to 24.8.0

--- a/mingw-w64-python-webcolors/PKGBUILD
+++ b/mingw-w64-python-webcolors/PKGBUILD
@@ -3,11 +3,8 @@
 _realname=webcolors
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.13
-pkgrel=2
+pkgver=24.8.0
+pkgrel=1
 pkgdesc="A library for working with color names and color value formats defined by the HTML and CSS specifications for use in documents on the Web (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,20 +16,14 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.io/packages/source/w/webcolors/webcolors-$pkgver.tar.gz")
-sha256sums=('c225b674c83fa923be93d235330ce0300373d02885cef23238813b0d5668304a')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} || true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('08b07af286a01bcd30d583a7acadf629583d1f79bfef27dd2c2c5c263817277d')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
