lfortran: update to 0.41.0

--- a/mingw-w64-lfortran/PKGBUILD
+++ b/mingw-w64-lfortran/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=lfortran
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.36.0
+pkgver=0.41.0
 pkgrel=1
 pkgdesc="Modern open-source (BSD licensed) interactive Fortran compiler built on top of LLVM (mingw-w64)"
 arch=('any')
@@ -14,20 +14,18 @@ msys2_references=(
 )
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-clang")
+         "${MINGW_PACKAGE_PREFIX}-clang"
+         #"${MINGW_PACKAGE_PREFIX}-mlir"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-llvm-15"
-             "${MINGW_PACKAGE_PREFIX}-compiler-rt-15"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-llvm"
              "${MINGW_PACKAGE_PREFIX}-fmt"
              "${MINGW_PACKAGE_PREFIX}-rapidjson")
 source=("${url}/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6b3b7cb1380e96a98a9fd3166a3e7e43c3339f736f76029c246436784ffc868f')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-}
+sha256sums=('edc37baa0714b283e6b36369d5bde85ad8bc6a6d335e9ded33ffea27496e1306')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -40,9 +38,7 @@ build() {
   fi
 
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    _extra_config+=("-DWITH_UNWIND=ON")
-    # A hack to make it build on clang* environments
-    LDFLAGS+=" $(cygpath -m ${MINGW_PREFIX})/opt/llvm-15/lib/clang/15.0.7/lib/windows/libclang_rt.builtins-${CARCH}.a"
+    _extra_config+=("-DWITH_UNWIND=ON" "-DWITH_LIBUNWIND=ON")
   fi
 
   LLVM_DIR="${MINGW_PREFIX}/opt/llvm-15/lib/cmake/llvm" \
@@ -51,10 +47,12 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${_extra_config[@]}" \
-      -DWITH_FMT=yes \
-      -DWITH_JSON=yes \
-      -DWITH_LLVM=yes \
-      -DWITH_STACKTRACE=no \
+      -DWITH_FMT=ON \
+      -DWITH_JSON=ON \
+      -DWITH_LLVM=ON \
+      -DWITH_MLIR=OFF \
+      -DWITH_ZLIB=OFF \
+      -DWITH_ZSTD=OFF \
       ../${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
