Remove pytest-test-runner (and some wheel)
pytest-test-runner should no longer be used (archived upstream,
uses deprecated setuptools feature):

* replace the dep with pytest if it's not there, or remove it
* replace setup.py calls with calls to pytest directly

While at it, also remove some wheel dependencies, since wheel is
now vendored in setuptools.

--- a/mingw-w64-python-cmd2/PKGBUILD
+++ b/mingw-w64-python-cmd2/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=2.4.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Extra features for standard library's cmd module (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -23,8 +23,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-attrs"
          "${MINGW_PACKAGE_PREFIX}-python-wcwidth")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner"
-              "${MINGW_PACKAGE_PREFIX}-python-pytest-xdist"
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-xdist"
+              "${MINGW_PACKAGE_PREFIX}-python-cov"
               "${MINGW_PACKAGE_PREFIX}-python-mock")
 options=('staticlibs' 'strip' '!debug')
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/python-cmd2/cmd2/archive/${pkgver}.tar.gz")
@@ -67,7 +67,7 @@ build() {
 check() {
   msg "Python test for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py pytest || true
+  ${MINGW_PREFIX}/bin/python -m pytest || true
 }
 
 package() {
