--- a/mingw-w64-python-cryptography/PKGBUILD
+++ b/mingw-w64-python-cryptography/PKGBUILD
@@ -9,7 +9,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
           "${MINGW_PACKAGE_PREFIX}-python-${_realname}3")
 pkgver=42.0.8
-pkgrel=1
+pkgrel=2
 pkgdesc="A package designed to expose cryptographic recipes and primitives to Python developers (mingw-w64)"
 license=('spdx:Apache-2.0')
 arch=('any')
@@ -28,11 +28,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-rust"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner"
+checkdepends=(
               #"${MINGW_PACKAGE_PREFIX}-python-iso8601"
               "${MINGW_PACKAGE_PREFIX}-python-pretend"
               #"${MINGW_PACKAGE_PREFIX}-python-cryptography-vectors"
