--- a/mingw-w64-python-pesq/PKGBUILD
+++ b/mingw-w64-python-pesq/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pesq
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.0.4
-pkgrel=3
+pkgrel=4
 pkgdesc='PESQ (Perceptual Evaluation of Speech Quality) Wrapper for Python Users (narrow band and wide band) (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,10 +18,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cython")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!emptydirs')
 source=("https://pypi.org/packages/source/${_realname:0:1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
 sha256sums=('b724b28f73fb638522982bd68e8c3c0957e2f45210639a460233b17aa7fc890b')
