--- a/mingw-w64-python-rfc3986-validator/PKGBUILD
+++ b/mingw-w64-python-rfc3986-validator/PKGBUILD
@@ -4,7 +4,7 @@ _realname=rfc3986-validator
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Pure python rfc3986 validator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,9 +14,12 @@ msys2_references=(
 url='https://github.com/naimetti/rfc3986-validator'
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel"
-             "${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+checkdepends=(
+  "${MINGW_PACKAGE_PREFIX}-python-pytest"
+  "${MINGW_PACKAGE_PREFIX}-python-rfc3987"
+  "${MINGW_PACKAGE_PREFIX}-python-hypothesis"
+)
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
 sha256sums=('3d44bde7921b3b9ec3ae4e3adca370438eccebc676456449b145d533b240d055')
 
@@ -29,7 +32,7 @@ build() {
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
 
-  "${MINGW_PREFIX}"/bin/python setup.py check
+  "${MINGW_PREFIX}"/bin/python -m pytest
 }
 
 package() {
