--- a/mingw-w64-ffmpeg-python/PKGBUILD
+++ b/mingw-w64-ffmpeg-python/PKGBUILD
@@ -4,7 +4,7 @@ _realname=ffmpeg-python
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.2.0
-pkgrel=4
+pkgrel=5
 pkgdesc='Python bindings for FFmpeg - with complex filtering support (mingw-w64)'
 provides=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
@@ -19,7 +19,7 @@ msys2_references=(
 license=('Apache')
 depends=("${MINGW_PACKAGE_PREFIX}-python-future" "${MINGW_PACKAGE_PREFIX}-ffmpeg")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-mock")
-makedepends=("unzip" "${MINGW_PACKAGE_PREFIX}-python-setuptools" "${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+makedepends=("unzip" "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!emptydirs')
 source=("${_realname}-${pkgver}.zip::https://github.com/kkroening/ffmpeg-python/archive/${pkgver}.zip")
 sha256sums=('0a6229ddcccff36dc199f877d2a06b00c2e2f7dee774233aae5e932c0ccdabf2')
