--- a/mingw-w64-python-deprecated/PKGBUILD
+++ b/mingw-w64-python-deprecated/PKGBUILD
@@ -4,7 +4,7 @@ _realname=deprecated
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.2.14
-pkgrel=1
+pkgrel=2
 pkgdesc="Python @deprecated decorator to deprecate old python classes, functions or methods (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,7 +15,7 @@ msys2_references=(
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python-wrapt")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/tantale/deprecated/archive/v${pkgver}.tar.gz")
 sha256sums=('3309fa073e6c13a126be9fb88959a02689b15a066fa7e222a07b62325e9673a7')
 
