--- a/mingw-w64-python-hunter/PKGBUILD
+++ b/mingw-w64-python-hunter/PKGBUILD
@@ -4,7 +4,7 @@ _realname=hunter
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=3.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Hunter is a flexible code tracing toolkit (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-benchmark"
-              "${MINGW_PACKAGE_PREFIX}-python-pytest-runner"
+              "${MINGW_PACKAGE_PREFIX}-python-pytest"
               #"${MINGW_PACKAGE_PREFIX}-python-process-tests"
               #"${MINGW_PACKAGE_PREFIX}-python-virtualenv"
              )
