--- a/mingw-w64-python-iocapture/PKGBUILD
+++ b/mingw-w64-python-iocapture/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=0.1.2
-pkgrel=4
+pkgrel=5
 pkgdesc="Capture stdout, stderr easily (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,7 +18,7 @@ msys2_references=(
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner"
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-flexmock"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
               "${MINGW_PACKAGE_PREFIX}-python-six")
@@ -42,7 +42,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${CARCH}"
-  ${MINGW_PREFIX}/bin/python setup.py pytest
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
