--- a/mingw-w64-python-kiwisolver/PKGBUILD
+++ b/mingw-w64-python-kiwisolver/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.4.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A fast implementation of the Cassowary constraint solver (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,11 +19,9 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel"
              "${MINGW_PACKAGE_PREFIX}-python-cppy"
              "${MINGW_PACKAGE_PREFIX}-cc")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
-              "${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/nucleic/kiwi/archive/${pkgver}.tar.gz")
 sha256sums=('2f3df2625993276a67a3ad312959f9c8333e23dfda0b7e5464b4927d34be6faa')
 
@@ -43,7 +41,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  "${MINGW_PREFIX}"/bin/python setup.py pytest || warning "Tests failed"
+  "${MINGW_PREFIX}"/bin/python -m pytest || warning "Tests failed"
 }
 
 package() {
