--- a/mingw-w64-python-manhole/PKGBUILD
+++ b/mingw-w64-python-manhole/PKGBUILD
@@ -4,7 +4,7 @@ _realname=manhole
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.8.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Debugging manhole for python applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,7 +15,7 @@ msys2_references=(
 license=('BSD')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner"
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-requests"
               #"${MINGW_PACKAGE_PREFIX}-python-process-tests"
               #"${MINGW_PACKAGE_PREFIX}-python-virtualenv"
