--- a/mingw-w64-python-markupsafe/PKGBUILD
+++ b/mingw-w64-python-markupsafe/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=2.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Implements a XML/HTML/XHTML Markup safe string for Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -20,7 +20,7 @@ msys2_repository_url='https://github.com/pallets/markupsafe'
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/M/MarkupSafe/MarkupSafe-${pkgver}.tar.gz")
 sha256sums=('d283d37a890ba4c1ae73ffadf8046435c76e7bc2247bbb63c00bd1a709c6544b')
 
@@ -37,7 +37,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${CARCH}"
-  ${MINGW_PREFIX}/bin/python setup.py pytest || warning "Tests failed"
+  ${MINGW_PREFIX}/bin/python -m pytest || warning "Tests failed"
 }
 
 package() {
