--- a/mingw-w64-python-py-cpuinfo/PKGBUILD
+++ b/mingw-w64-python-py-cpuinfo/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=9.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Get CPU info with pure Python 2 & 3 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,7 +18,7 @@ msys2_references=(
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/workhorsy/py-cpuinfo/archive/v${pkgver}.tar.gz")
 sha256sums=('21dfd34d85f4d1419aad63f4945d7356025794fd1529c95644f618aac390625c')
 
@@ -37,7 +37,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${CARCH}"
-  ${MINGW_PREFIX}/bin/python setup.py pytest
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
