--- a/mingw-w64-python-whoosh/PKGBUILD
+++ b/mingw-w64-python-whoosh/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=2.7.4
-pkgrel=5
+pkgrel=6
 pkgdesc="Fast, pure-Python full text indexing, search, and spell checking library (mingw-w64)"
 url='https://github.com/mchaput/whoosh'
 msys2_references=(
@@ -19,7 +19,7 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              'git')
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("git+https://github.com/mchaput/whoosh#tag=v${pkgver}")
 sha256sums=('SKIP')
 
