--- a/mingw-w64-python-yarl/PKGBUILD
+++ b/mingw-w64-python-yarl/PKGBUILD
@@ -4,7 +4,7 @@ _realname=yarl
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.9.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Yet another URL library (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,15 +19,13 @@ depends=(
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-wheel"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
   "${MINGW_PACKAGE_PREFIX}-python-expandvars"
   "${MINGW_PACKAGE_PREFIX}-cython"
   "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pytest"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
-  "${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+  "${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
 source=("https://github.com/aio-libs/yarl/archive/v${pkgver}/yarl-${pkgver}.tar.gz")
 sha256sums=('d0df8ec8d4d41326406c4c2c27b795a12ace92e5cfcabcf934fa622b36a982f5')
 
