emscripten: update to 3.1.69

--- a/mingw-w64-emscripten/PKGBUILD
+++ b/mingw-w64-emscripten/PKGBUILD
@@ -6,10 +6,10 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 # Sadly, upstream currently suggests bundling a binaryen version for the time being:
 # https://github.com/emscripten-core/emscripten/issues/12252
 # I'm obviously unhappy about that but it appears to be the only practical solution for the time being.
-pkgver=3.1.67
+pkgver=3.1.69
 # NOTE: You need to run ./get-compatible-versions.sh after changing the pkgver!
-_binaryen_revision=29d30fabcb688b599920deef9d92a5413615eaab
-_llvm_project_revision=b9198a17315757dc0c2e831c9df0498dcab55285
+_binaryen_revision=34906bfbc99d31b3e62d2d006af2247d8418ba2f
+_llvm_project_revision=16c8056ca9d3c28ca5e409162a0c82d5726ea655
 pkgrel=1
 pkgdesc="Compile C and C++ into highly-optimizable JavaScript for the web (mingw-w64)"
 arch=('any')
@@ -35,9 +35,9 @@ install="emscripten-${MSYSTEM}.install"
 source=("git+$msys2_repository_url#tag=$pkgver"
         "llvm-project-$_llvm_project_revision.tar.gz::https://github.com/llvm/llvm-project/archive/$_llvm_project_revision.tar.gz"
         "binaryen-$_binaryen_revision.tar.gz::https://github.com/WebAssembly/binaryen/archive/$_binaryen_revision.tar.gz")
-sha256sums=('3bd7d5c966bf19eb5d95521743c4c57a20c942d5d9f85cd6c970e71ea133dd3c'
-            'ce1b52d7494fa956893a095f15dcbf655478a7d388f596bb15510e11e6995364'
-            '3af708566d45981c6f148192a739dcecc1721812b0f87b86034e1db662d23b66')
+sha256sums=('af0e2165520c0870757e7bdff83aeef6228bebb167a6f4989def612ddfbb0e77'
+            'fc3e27bd8604950d8d96ca09400939fa028cd6573f78f5562ea071b2254aa205'
+            '05652fc673acd7051a826046dee73a998d8ff553bd059bffac873afe2f7bd1e5')
 noextract=("llvm-project-$_llvm_project_revision.tar.gz")
 
 prepare() {
@@ -109,7 +109,7 @@ package() {
 
   # Clean up some unnecessary bins and libs
   rm clang-check.exe clang-cl.exe clang-cpp.exe clang-extdef-mapping.exe clang-format.exe \
-      clang-offload-bundler.exe clang-refactor.exe clang-rename.exe clang-scan-deps.exe \
+      clang-offload-bundler.exe clang-refactor.exe clang-scan-deps.exe \
       lld-link.exe ld.lld.exe llvm-lib.exe libclang.dll
   cd ..
   rm -r share
