ffmpeg-python: patch out pytest-runner dep
it's not used

--- a/mingw-w64-ffmpeg-python/PKGBUILD
+++ b/mingw-w64-ffmpeg-python/PKGBUILD
@@ -21,13 +21,19 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-future" "${MINGW_PACKAGE_PREFIX}-ffmpeg
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-mock")
 makedepends=("unzip" "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!emptydirs')
-source=("${_realname}-${pkgver}.zip::https://github.com/kkroening/ffmpeg-python/archive/${pkgver}.zip")
-sha256sums=('0a6229ddcccff36dc199f877d2a06b00c2e2f7dee774233aae5e932c0ccdabf2')
+source=("${_realname}-${pkgver}.zip::https://github.com/kkroening/ffmpeg-python/archive/${pkgver}.zip"
+        "0001-remove-unused-pytest-runner-dep.patch")
+sha256sums=('0a6229ddcccff36dc199f877d2a06b00c2e2f7dee774233aae5e932c0ccdabf2'
+            '31b5cc3d17cf35f3ebc760cd0fbc95594580ffa36b5e93b21fdd2ef99fb49b45')
 noextract=("${_realname}-${pkgver}.zip") # bsdtar chokes on README symlink, we need unzip
 
 prepare() {
   cd "$srcdir"
   unzip "${_realname}-${pkgver}.zip"
+  cd "${_realname}-${pkgver}"
+  patch -Np1 -i ../0001-remove-unused-pytest-runner-dep.patch
+
+  cd "$srcdir"
   rm -rf python-build-${MSYSTEM} | true
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
