python-cffi: Update to 1.17.1
and work around gcc build errors

--- a/mingw-w64-python-cffi/PKGBUILD
+++ b/mingw-w64-python-cffi/PKGBUILD
@@ -6,8 +6,8 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.16.0
-pkgrel=2
+pkgver=1.17.1
+pkgrel=1
 pkgdesc="Foreign Function Interface for Python calling C code (mingw-w64)"
 url='https://cffi.readthedocs.io/'
 license=('MIT')
@@ -21,7 +21,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-libffi"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools" "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://pypi.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "mingw-non-x86.patch")
-sha256sums=('bcb3ef43e58665bbda2fb198698fcae6776483e0c4a631aa5647806c25e02cc0'
+sha256sums=('1c39c6016c32bc48dd54561950ebd6836e1670f2ae46128f67cf49e789c52824'
             'c8a8ea2d65932ea0b62eae56dbc8afd6baacaadc7cb284ca0e4edf7ed1460c52')
 
 prepare() {
@@ -33,6 +33,13 @@ prepare() {
 
 build() {
   cd "${srcdir}/python-build-${CARCH}"
+
+  # work around gcc errors
+  if [[ "${CC}" == "gcc" ]]; then
+    CFLAGS+=" -Wno-error=incompatible-pointer-types"
+    CXXFLAGS+=" -Wno-error=incompatible-pointer-types"
+  fi
+
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
