rfc3986-validator: patch out pytest-runner dep

--- a/mingw-w64-python-rfc3986-validator/PKGBUILD
+++ b/mingw-w64-python-rfc3986-validator/PKGBUILD
@@ -20,10 +20,16 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-rfc3987"
   "${MINGW_PACKAGE_PREFIX}-python-hypothesis"
 )
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('3d44bde7921b3b9ec3ae4e3adca370438eccebc676456449b145d533b240d055')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz"
+        "0001-remove-pytest-runner-dep.patch")
+sha256sums=('3d44bde7921b3b9ec3ae4e3adca370438eccebc676456449b145d533b240d055'
+            '993bd678996e98fad8912416b94e773c257d17f68b5e39794c84428db21ba9d3')
 
 build() {
+  cd "${_realname/-/_}-${pkgver}"
+  patch -Np1 -i ../0001-remove-pytest-runner-dep.patch
+
+  cd "${srcdir}"
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   "${MINGW_PREFIX}"/bin/python setup.py build
