flake8: remove pytest-runner dep
not used

--- a/mingw-w64-python-flake8/PKGBUILD
+++ b/mingw-w64-python-flake8/PKGBUILD
@@ -4,7 +4,7 @@ _realname=flake8
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=7.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="The modular source code checker: pep8, pyflakes and co (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -20,10 +20,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-pyflakes"
          "${MINGW_PACKAGE_PREFIX}-python-pycodestyle")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock"
-              "${MINGW_PACKAGE_PREFIX}-python-pytest-runner")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('48a07b626b55236e0fb4784ee69a465fbf59d79eec1f5b4785c3d3bc57d17aa5')
