--- a/mingw-w64-libksba/PKGBUILD
+++ b/mingw-w64-libksba/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.6.7
 pkgrel=1
 pkgdesc="A CMS and X.509 access library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('GPL')
 url="https://www.gnupg.org/related_software/libksba/"
 msys2_repository_url="https://git.gnupg.org/cgi-bin/gitweb.cgi?p=libksba.git"
