--- a/mingw-w64-libassuan/PKGBUILD
+++ b/mingw-w64-libassuan/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.5.7
 pkgrel=1
 pkgdesc="A IPC library used by some GnuPG related software (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx: LGPL-2.1-or-later OR GPL-3.0-or-later')
 url="https://gnupg.org/related_software/libassuan"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
