--- a/mingw-w64-libcue/PKGBUILD
+++ b/mingw-w64-libcue/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.3.0
 pkgrel=1
 pkgdesc="Parses so-called cue sheets and handles the parsed data (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/lipnitsk/libcue/"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake" "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
