--- a/mingw-w64-libdvdcss/PKGBUILD
+++ b/mingw-w64-libdvdcss/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.4.3
 pkgrel=1
 pkgdesc="Portable abstraction library for DVD decryption (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.videolan.org/developers/libdvdcss.html"
 license=("GPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
