--- a/mingw-w64-libdvdread/PKGBUILD
+++ b/mingw-w64-libdvdread/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=6.1.3
 pkgrel=1
 pkgdesc="Provides a simple foundation for reading DVD video disks (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.videolan.org/developers/libdvdnav.html"
 license=('spdx:GPL-2.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
