--- a/mingw-w64-libgcrypt/PKGBUILD
+++ b/mingw-w64-libgcrypt/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.11.0
 pkgrel=2
 pkgdesc="General purpose cryptographic library based on the code from GnuPG (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gnupg.org"
 msys2_references=(
   "cpe: cpe:/a:gnupg:libgcrypt"
