--- a/mingw-w64-libreplaygain/PKGBUILD
+++ b/mingw-w64-libreplaygain/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=475
 pkgrel=2
 pkgdesc="A library to adjust audio gain (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://musepack.net/"
 license=("LGPL")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
