--- a/mingw-w64-libsecret/PKGBUILD
+++ b/mingw-w64-libsecret/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.21.2
 pkgrel=1
 pkgdesc="Library for storing and retrieving passwords and other secrets (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://wiki.gnome.org/Projects/Libsecret"
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libsecret"
 license=("LGPL")
