--- a/mingw-w64-libsigc++/PKGBUILD
+++ b/mingw-w64-libsigc++/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.12.1
 pkgrel=1
 pkgdesc="Libsigc++ implements a full callback system for use in widget libraries - V2 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libsigcplusplus.github.io/libsigcplusplus/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
