--- a/mingw-w64-npth/PKGBUILD
+++ b/mingw-w64-npth/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.7
 pkgrel=1
 pkgdesc="New portable threads library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
 license=('LGPL')
