--- a/mingw-w64-python-pywin32/PKGBUILD
+++ b/mingw-w64-python-pywin32/PKGBUILD
@@ -10,7 +10,7 @@ url='https://github.com/mhammond/pywin32'
 pkgdesc='Python for Windows Extensions (mingw-w64)'
 license=('spdx:PSF-2.0')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: pywin32'
 )
