python-ftfy: update to 6.3.0

--- a/mingw-w64-python-ftfy/PKGBUILD
+++ b/mingw-w64-python-ftfy/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=ftfy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=6.2.3
+pkgver=6.3.0
 pkgrel=1
 pkgdesc='Fixes some problems with Unicode text after the fact (mingw-w64)'
 arch=('any')
@@ -17,10 +17,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-wcwidth")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
-options=(!strip)
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling")
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('79b505988f29d577a58a9069afe75553a02a46e42de6091c0660cdc67812badc')
+sha256sums=('1c7d6418e72b25a7760feb150acf574b86924dbb2e95b32c0b3abbd1ba3d7ad6')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
