python-trimesh: update to 4.5.0

--- a/mingw-w64-python-trimesh/PKGBUILD
+++ b/mingw-w64-python-trimesh/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=trimesh
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.4.6
+pkgver=4.5.0
 pkgrel=1
 pkgdesc='Import, export, process, analyze and view triangular meshes. (mingw-w64)'
 arch=('any')
@@ -18,13 +18,13 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-numpy")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-wheel")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-networkx: graph operations"
             "${MINGW_PACKAGE_PREFIX}-python-scipy: convex hulls"
             "${MINGW_PACKAGE_PREFIX}-python-pyglet: preview windows")
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('b0e64bf060c8d3a7173024fb6fe099f70e7aa306303568882cbac90e6599f45b')
+sha256sums=('fc49d9fbc29e25017775a024e5df80f625c9dddbf982ce3ea5d3445070950425')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
